--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
       color: #333;
       text-align: center;
+
+      /* 👇 Fondo con tu textura */
+      background-image: url("FONDO.jpg");
+      background-size: cover;       /* Ajusta el fondo al tamaño de la pantalla */
+      background-repeat: no-repeat; /* Evita mosaicos */
+      background-attachment: fixed; /* Efecto parallax fijo */
     }
 
     header {
-      background: #222;
+      background: rgba(0,0,0,0.6);  /* fondo semitransparente */
       color: white;
       padding: 1.5rem;
     }
@@ -30,7 +35,7 @@
     }
 
     nav {
-      background: #444;
+      background: rgba(0,0,0,0.7);
       padding: 0.8rem;
     }
 
@@ -48,6 +53,15 @@
 
     main {
       padding: 2rem;
+      background: rgba(255,255,255,0.85); /* Caja clara sobre el fondo */
+      margin: 2rem auto;
+      width: 80%;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    section {
+      margin-bottom: 2rem;
     }
   </style>
 </head>
