--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      color: #333;
-      text-align: center;
-
-      /* Fondo con tu textura */
       background-image: url("FONDO.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
+      color: #333;
     }
 
     nav {
-      background: #BE1823; /* 👈 tu color personalizado */
+      background: #BE1823; /* tu color personalizado */
       padding: 0.8rem;
+      text-align: center;
     }
 
     nav a {
@@ -36,17 +34,29 @@
       color: #ffcc00;
     }
 
-    main {
-      padding: 2rem;
-      background: rgba(255,255,255,0.85);
-      margin: 2rem auto;
-      width: 80%;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    /* Contenedor centrado */
+    .contenido {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 60px); /* ocupa toda la pantalla menos la barra */
+      text-align: center;
     }
 
-    section {
-      margin-bottom: 2rem;
+    /* Estilo del título */
+    .titulo {
+      font-size: 2.5rem;
+      font-family: "Cooper Black", serif;
+      color: #BE1823;
+      line-height: 1.3;
+      margin-bottom: 1.5rem;
+    }
+
+    /* Imagen debajo del título */
+    .contenido img {
+      max-width: 300px; /* ajusta el tamaño si es necesario */
+      height: auto;
     }
   </style>
 </head>
@@ -57,21 +67,12 @@
     <a href="#informacion">Información</a>
   </nav>
 
-  <main>
-    <section id="inicio">
-      <h2>Inicio</h2>
-      <p>Bienvenidos a nuestra página de prueba 🎉</p>
-    </section>
-
-    <section id="ubicacion">
-      <h2>Ubicación</h2>
-      <p>Aquí puedes poner un mapa o la dirección.</p>
-    </section>
-
-    <section id="informacion">
-      <h2>Información</h2>
-      <p>Aquí puedes añadir detalles adicionales.</p>
-    </section>
-  </main>
+  <div class="contenido">
+    <h1 class="titulo">
+      Iara & <br>
+      Imanol
+    </h1>
+    <img src="ilustracion.png" alt="Ilustración decorativa">
+  </div>
 </body>
 </html>
