--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       align-items: center;
       height: calc(100vh - 60px); /* ocupa toda la pantalla menos la barra */
       text-align: center;
+      padding: 1rem;
     }
 
     /* Estilo del título */
@@ -53,10 +54,10 @@
       margin-bottom: 1.5rem;
     }
 
-    /* Imagen debajo del título */
+    /* Imagen responsiva */
     .contenido img {
-      max-width: 300px; /* ajusta el tamaño si es necesario */
-      height: auto;
+      max-width: 90%;   /* se adapta al ancho de la pantalla */
+      height: auto;     /* mantiene proporción */
     }
   </style>
 </head>
