--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
       Iara & <br>
       Imanol
     </h1>
-    <img src="ilustracion.png" alt="Ilustración decorativa">
+    <img src="ilustración.png">
   </div>
 </body>
 </html>
+
 
