--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: "Cooper Black", serif;
       background-image: url("FONDO.jpg");
       background-size: cover;
       background-repeat: no-repeat;
@@ -77,6 +77,7 @@
   </div>
 </body>
 </html>
+
 
 
 
