--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: "Cooper Black", serif;
+      font-family: Arial, sans-serif;
       background-image: url("FONDO.jpg");
       background-size: cover;
       background-repeat: no-repeat;
@@ -40,24 +40,24 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: calc(100vh - 60px); /* ocupa toda la pantalla menos la barra */
+      height: calc(100vh - 60px);
       text-align: center;
       padding: 1rem;
     }
 
     /* Estilo del título */
     .titulo {
-      font-size: 10rem;
+      font-size: 10rem; /* 👈 tamaño que pediste */
       font-family: "Cooper Black", serif;
       color: #BE1823;
-      line-height: 1.3;
-      margin-bottom: 1.5rem;
+      line-height: 1.05; /* 👈 reduce espacio entre líneas */
+      margin-bottom: 1rem;
     }
 
     /* Imagen responsiva */
     .contenido img {
-      max-width: 90%;   /* se adapta al ancho de la pantalla */
-      height: auto;     /* mantiene proporción */
+      max-width: 90%;
+      height: auto;
     }
   </style>
 </head>
@@ -73,11 +73,7 @@
       Iara & <br>
       Imanol
     </h1>
-    <img src="ilustración.png">
+    <img src="Ilustracion.png">
   </div>
 </body>
 </html>
-
-
-
-
