--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       Iara & <br>
       Imanol
     </h1>
-    <img src="ilustracion.png" alt="Ilustración decorativa">
+    <img src="Ilustración.png">
   </div>
 </body>
 </html>
