--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       color: #333;
+      overflow-x: hidden;
     }
 
     header {
@@ -39,9 +40,10 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      height: calc(100vh - 60px);
+      width: 100vw;
       text-align: center;
       padding-top: 6vh;
+      margin: 0;
     }
 
     .titulo {
@@ -56,8 +58,11 @@
     }
 
     main img {
-      max-width: 90%;
+      width: 100vw;
       height: auto;
+      display: block;
+      margin: 0;
+      padding: 0;
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
