--- a/index.html
+++ b/index.html
@@ -73,11 +73,14 @@
       max-width: 800px;
       text-align: left;
       margin: 2rem auto;
-      padding: 0 2rem;
+      padding: 1.5rem 2rem;
       font-family: "Segoe UI", sans-serif;
-      font-size: 1.2rem;
-      line-height: 1.6;
-      color: #222;
+      font-size: 1.4rem;
+      line-height: 1.8;
+      color: #111;
+      background-color: rgba(255, 255, 255, 0.75);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
@@ -151,4 +154,3 @@
   </script>
 </body>
 </html>
-
