--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iara & Imanol</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -72,14 +73,12 @@
       width: 60%;
       align-self: flex-start;
       margin: 2rem 0 2rem 5vw;
-      padding: 2rem;
-      background-color: #f9f9f9;
+      padding-left: 2rem;
       border-left: 6px solid #BE1823;
-      font-family: "Segoe UI", sans-serif;
-      font-size: 1.3rem;
+      font-family: 'Cormorant Garamond', serif;
+      font-size: 1.4rem;
       line-height: 1.8;
       color: #111;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
@@ -87,7 +86,7 @@
     }
 
     #contador {
-      font-weight: bold;
+      font-weight: 600;
       color: #BE1823;
     }
 
