--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iara & Imanol</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -75,9 +75,9 @@
       margin: 2rem 0 2rem 5vw;
       padding-left: 2rem;
       border-left: 6px solid #BE1823;
-      font-family: 'Cormorant Garamond', serif;
-      font-size: 1.4rem;
-      line-height: 1.8;
+      font-family: 'Zilla Slab', serif;
+      font-size: 1.2rem;
+      line-height: 1.6;
       color: #111;
       opacity: 0;
       transform: translateY(20px);
