--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family:'Zilla Slab', serif;
       background-image: url("FONDO.jpg");
       background-size: cover;
       background-repeat: no-repeat;
@@ -41,7 +41,7 @@
       flex-direction: column;
       align-items: center;
       width: 100vw;
-      padding-top: 4vh;
+      padding-top: 2vh;
       margin: 0;
     }
 
@@ -152,4 +152,5 @@
   </script>
 </body>
 </html>
+
 
