--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
   <style>
     body {
       margin: 0;
-      font-family:'Zilla Slab', serif;
-      background-image: url("FONDO.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      color: #333;
+      font-family: 'Zilla Slab', serif;
+      background-color: #F8F9FC;
+      color: #111;
       overflow-x: hidden;
     }
 
@@ -38,51 +35,40 @@
 
     main {
       display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+      padding: 6vh 5vw;
+      gap: 2rem;
+    }
+
+    .col-izquierda {
+      flex: 1;
+      display: flex;
       flex-direction: column;
-      align-items: center;
-      width: 100vw;
-      padding-top: 2vh;
-      margin: 0;
+      justify-content: flex-start;
     }
 
     .titulo {
-      font-size: clamp(3rem, 10vw, 10rem);
+      font-size: clamp(3rem, 8vw, 8rem);
       font-family: "Cooper Black", serif;
       color: #BE1823;
       line-height: 1.05;
-      margin-bottom: 1rem;
-      text-align: center;
+      margin-bottom: 1.5rem;
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
-    }
-
-    main img {
-      width: 100vw;
-      height: auto;
-      display: block;
-      margin: 0;
-      padding: 0;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: aparecer 1s ease-out forwards;
-      animation-delay: 0.3s;
     }
 
     .mensaje {
-      width: 60%;
-      align-self: flex-start;
-      margin: 2rem 0 2rem 5vw;
-      padding-left: 2rem;
       border-left: 6px solid #BE1823;
-      font-family: 'Zilla Slab', serif;
+      padding-left: 1.5rem;
       font-size: 1.2rem;
       line-height: 1.6;
-      color: #111;
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
-      animation-delay: 0.6s;
+      animation-delay: 0.4s;
     }
 
     #contador {
@@ -90,10 +76,45 @@
       color: #BE1823;
     }
 
+    .col-derecha {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .col-derecha img {
+      max-width: 100%;
+      height: auto;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: aparecer 1s ease-out forwards;
+      animation-delay: 0.6s;
+    }
+
     @keyframes aparecer {
       to {
         opacity: 1;
         transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 768px) {
+      main {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .col-izquierda, .col-derecha {
+        width: 100%;
+      }
+
+      .titulo {
+        text-align: center;
+      }
+
+      .mensaje {
+        margin-top: 1rem;
       }
     }
   </style>
@@ -106,22 +127,26 @@
   </header>
 
   <main id="inicio">
-    <h1 class="titulo">
-      Iara & <br>
-      Imanol
-    </h1>
-    <img src="Ilustración.png" alt="Ilustración de Iara e Imanol">
+    <div class="col-izquierda">
+      <h1 class="titulo">
+        Iara & <br>
+        Imanol
+      </h1>
+      <div class="mensaje">
+        <p>
+          Hace: <span id="contador"></span> que más de 12.952 km nos separan.
+        </p>
+        <p>
+          Por eso, para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.
+        </p>
+        <p>
+          No necesitamos regalos materiales; lo único que queremos es poder volver a vivir en el mismo lugar. La tarjeta es la forma que encontramos de hacer posible esta fiesta y de ayudarnos a transformar ese deseo en realidad.
+        </p>
+      </div>
+    </div>
 
-    <div class="mensaje">
-      <p>
-        Hace: <span id="contador"></span> que más de 12.952 km nos separan.
-      </p>
-      <p>
-        Por eso, para nosotros esto no es simplemente un casamiento: es la posibilidad y la apuesta a un futuro juntos.
-      </p>
-      <p>
-        No necesitamos regalos materiales; lo único que queremos es poder volver a vivir en el mismo lugar. La tarjeta es la forma que encontramos de hacer posible esta fiesta y de ayudarnos a transformar ese deseo en realidad.
-      </p>
+    <div class="col-derecha">
+      <img src="Ilustración.png" alt="Ilustración de Iara e Imanol">
     </div>
   </main>
 
@@ -152,5 +177,3 @@
   </script>
 </body>
 </html>
-
-
