--- a/index.html
+++ b/index.html
@@ -88,13 +88,31 @@
     }
 
     .col-derecha img {
-      width: 120%;
+      width: 140%;
       max-width: none;
       height: auto;
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
       animation-delay: 0.6s;
+    }
+
+    section#ubicacion {
+      background-color: #BE1823;
+      padding: 6vh 5vw;
+      color: white;
+    }
+
+    .ubicacion-titulo {
+      font-family: "Cooper Black", serif;
+      font-size: clamp(2rem, 6vw, 5rem);
+      margin: 0;
+      margin-bottom: 2rem;
+      text-align: center;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: aparecer 1s ease-out forwards;
+      animation-delay: 0.2s;
     }
 
     @keyframes aparecer {
@@ -160,7 +178,8 @@
   </main>
 
   <section id="ubicacion">
-    <!-- Contenido de ubicación -->
+    <h2 class="ubicacion-titulo">Donde vamos a festejar</h2>
+    <!-- Aquí podemos agregar mapa, dirección, descripción o ilustración -->
   </section>
 
   <section id="informacion">
