--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   </main>
 
   <section id="ubicacion">
-    <h2 class="ubicacion-titulo">Donde vamos a festejar</h2>
+    <h2 class="ubicacion-titulo">Donde?</h2>
     <!-- Aquí podemos agregar mapa, dirección, descripción o ilustración -->
   </section>
 
@@ -205,3 +205,4 @@
   </script>
 </body>
 </html>
+
