--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Roboto Condensed', sans-serif;
+      font-family: 'Oswald', Regular 400;
       background-color: #F8F9FC;
       color: #111;
       overflow-x: hidden;
@@ -239,3 +239,4 @@
   </script>
 </body>
 </html>
+
