--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <h3 class="ubicacion-subtitulo">Las Mercedes – Casa de Campo</h3>
       <p class="ubicacion-descripcion">Las Mercedes 470, X5109 Unquillo, Córdoba</p>
       <p class="ubicacion-link">
-        <a href="https://share.google/Oi7dGKu2EULUwpNbr" target="_blank">Ubicación</a>
+        <a href="https://maps.app.goo.gl/vf11qAHvNhCfVaF27" target="_blank">Ubicación</a>
       </p>
     </div>
   </section>
@@ -239,4 +239,5 @@
   </script>
 </body>
 </html>
+
 
