--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: url("Comp 1.gif") center center / cover no-repeat;
+      background: url("Comp 1.webp") center center / cover no-repeat;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -55,9 +55,10 @@
     .titulo-central {
       font-family: "Cooper Black", serif;
       font-size: clamp(3rem, 10vw, 10rem);
-      color: white;
+      color: #BE1823;
       text-align: center;
       z-index: 2;
+      line-height: 1.1;
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
@@ -141,7 +142,10 @@
 
   <main id="inicio">
     <div class="inicio-fondo">
-      <h1 class="titulo-central">IARA & IMANOL</h1>
+      <h1 class="titulo-central">
+        IARA &<br>
+        IMANOL
+      </h1>
     </div>
   </main>
 
@@ -161,5 +165,3 @@
   </section>
 </body>
 </html>
-
-
