--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: url("Comp 1.webp") center center / cover no-repeat;
+      background: url("Comp 1.gif") center center / cover no-repeat;
       display: flex;
       justify-content: center;
       align-items: center;
