--- a/index.html
+++ b/index.html
@@ -1,167 +1,38 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iara & Imanol</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Roboto Condensed', sans-serif;
-      background-color: #F8F9FC;
-      color: #111;
-      overflow-x: hidden;
-    }
+main#inicio {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
 
-    header {
-      background: #BE1823;
-      padding: 0.8rem;
-      text-align: center;
-    }
+.inicio-fondo {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    header a {
-      color: white;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-size: 1rem;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
+.gif-fondo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("Comp 1.gif") center center / cover no-repeat;
+  opacity: 0.75;
+  z-index: 1;
+}
 
-    header a:hover {
-      color: #ffcc00;
-    }
-
-    main#inicio {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    .inicio-fondo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url("Comp 1.gif") center center / cover no-repeat;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .titulo-central {
-      font-family: "Cooper Black", serif;
-      font-size: clamp(3rem, 10vw, 10rem);
-      color: #BE1823;
-      text-align: center;
-      z-index: 2;
-      line-height: 1.1;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: aparecer 1s ease-out forwards;
-    }
-
-    section#ubicacion {
-      background-color: #BE1823;
-      padding: 6vh 5vw;
-      color: white;
-    }
-
-    .ubicacion-titulo {
-      font-family: "Cooper Black", serif;
-      font-size: clamp(2rem, 6vw, 5rem);
-      margin: 0 0 2rem 0;
-      text-align: center;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: aparecer 1s ease-out forwards;
-      animation-delay: 0.2s;
-    }
-
-    .ubicacion-contenido {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: left;
-      font-family: 'Roboto Condensed', sans-serif;
-      font-size: 1.2rem;
-      line-height: 1.6;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: aparecer 1s ease-out forwards;
-      animation-delay: 0.4s;
-    }
-
-    .ubicacion-subtitulo {
-      font-weight: 700;
-      font-size: 1.4rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .ubicacion-descripcion {
-      margin-bottom: 1rem;
-    }
-
-    .ubicacion-link a {
-      color: white;
-      text-decoration: underline;
-      font-weight: bold;
-    }
-
-    @keyframes aparecer {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @media (max-width: 768px) {
-      .titulo-central {
-        font-size: 3rem;
-        padding: 0 1rem;
-      }
-
-      .ubicacion-contenido {
-        font-size: 1rem;
-      }
-
-      .ubicacion-subtitulo {
-        font-size: 1.2rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <a href="#inicio">Inicio</a>
-    <a href="#ubicacion">Ubicación</a>
-    <a href="#informacion">Información</a>
-  </header>
-
-  <main id="inicio">
-    <div class="inicio-fondo">
-      <h1 class="titulo-central">
-        IARA &<br>
-        IMANOL
-      </h1>
-    </div>
-  </main>
-
-  <section id="ubicacion">
-    <h2 class="ubicacion-titulo">Donde?</h2>
-    <div class="ubicacion-contenido">
-      <h3 class="ubicacion-subtitulo">Las Mercedes – Casa de Campo</h3>
-      <p class="ubicacion-descripcion">Las Mercedes 470, X5109 Unquillo, Córdoba</p>
-      <p class="ubicacion-link">
-        <a href="https://share.google/Oi7dGKu2EULUwpNbr" target="_blank">Ubicación</a>
-      </p>
-    </div>
-  </section>
-
-  <section id="informacion">
-    <!-- Contenido de información -->
-  </section>
-</body>
-</html>
+.titulo-central {
+  font-family: "Cooper Black", serif;
+  font-size: clamp(3rem, 10vw, 10rem);
+  color: #BE1823;
+  text-align: center;
+  z-index: 2;
+  line-height: 1.1;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: aparecer 1s ease-out forwards;
+}
