--- a/index.html
+++ b/index.html
@@ -37,39 +37,32 @@
       position: relative;
       width: 100vw;
       height: 100vh;
-      overflow: hidden;
-    }
-
-    .inicio-fondo {
-      position: relative;
-      width: 100%;
-      height: 100%;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      justify-content: flex-start;
       align-items: center;
-    }
-
-    .gif-fondo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url("Comp 1.gif") center center / cover no-repeat;
-      opacity: 0.75;
-      z-index: 1;
+      padding-top: 8vh;
     }
 
     .titulo-central {
       font-family: "Cooper Black", serif;
-      font-size: clamp(3rem, 10vw, 10rem);
+      font-size: clamp(1.5rem, 5vw, 5rem);
       color: #BE1823;
       text-align: center;
-      z-index: 2;
       line-height: 1.1;
+      margin-bottom: 2rem;
       opacity: 0;
       transform: translateY(20px);
       animation: aparecer 1s ease-out forwards;
+    }
+
+    .gif-fondo {
+      width: 100%;
+      height: 60vh;
+      background: url("Comp 1.gif") center center / cover no-repeat;
+      opacity: 0.75;
+      animation: aparecer 1s ease-out forwards;
+      animation-delay: 0.3s;
     }
 
     section#ubicacion {
@@ -127,8 +120,12 @@
 
     @media (max-width: 768px) {
       .titulo-central {
-        font-size: 3rem;
+        font-size: 2rem;
         padding: 0 1rem;
+      }
+
+      .gif-fondo {
+        height: 40vh;
       }
 
       .ubicacion-contenido {
@@ -149,13 +146,11 @@
   </header>
 
   <main id="inicio">
-    <div class="inicio-fondo">
-      <div class="gif-fondo"></div>
-      <h1 class="titulo-central">
-        IARA &<br>
-        IMANOL
-      </h1>
-    </div>
+    <h1 class="titulo-central">
+      IARA &<br>
+      IMANOL
+    </h1>
+    <div class="gif-fondo"></div>
   </main>
 
   <section id="ubicacion">
