--- a/index.html
+++ b/index.html
@@ -214,20 +214,27 @@
     <div class="detalles-bloques">
       <div class="bloque-detalle">
         <h3>CUANDO?</h3>
-        <p>Sábado 27 de Diciembre de 2025 a las 19:30 hs</p>
+        <p>Sábado 27 de Diciembre de 2025 
+          a las 19:30 hs</p>
       </div>
       <div class="bloque-detalle">
         <h3>DONDE?</h3>
-        <p>Las Mercedes Casa de Campo – Unquillo<br>
-        (Cuenta con su propio estacionamiento para más tranquilidad)</p>
+        <p>Las Mercedes Casa de Campo 
+          Unquillo<br>
+        (Cuenta con su propio estacionamiento 
+        para más tranquilidad)</p>
       </div>
       <div class="bloque-detalle">
         <h3>DRESSCODE?</h3>
-        <p>Como estamos en una casona de campo recomendamos semiformal para asegurar la comodidad de los presentes</p>
+        <p>Como estamos en una casona de campo 
+          recomendamos semiformal para asegurar la 
+          comodidad de los presentes</p>
       </div>
       <div class="bloque-detalle">
         <h3>HASTA CUANDO PUEDO CONFIRMAR?</h3>
-        <p>El deadline de confirmación es hasta el 9 de Diciembre como fecha máxima</p>
+        <p>El deadline de confirmación 
+          es hasta el 9 de Diciembre 
+          como fecha máxima</p>
       </div>
     </div>
   </section>
@@ -241,3 +248,4 @@
   </section>
 </body>
 </html>
+
