--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iara & Imanol</title>
-  <style>
-    @font-face {
-      font-family: 'Adabelle Handwriting';
-      src: url('AdabelleHandwriting-Regular.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-    }
 
+  <!-- Importar Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <style>
     body {
       margin: 0;
-      font-family: 'Adabelle Handwriting', cursive;
+      font-family: 'Montserrat', sans-serif; /* Cambiamos aquí */
       background-color: #F8F9FC;
       color: #111;
       overflow-x: hidden;
+      font-size: 18px;
     }
 
     header {
@@ -33,7 +31,7 @@
       font-size: 1rem;
       font-weight: bold;
       transition: color 0.3s;
-      font-family: 'Adabelle Handwriting', cursive;
+      font-family: 'Montserrat', sans-serif; 
     }
 
     header a:hover {
@@ -99,7 +97,7 @@
       max-width: 800px;
       margin: 0 auto;
       text-align: center;
-      font-family: 'Adabelle Handwriting', cursive;
+      font-family: 'Montserrat', sans-serif;
       font-size: 1.2rem;
       line-height: 1.4;
       animation: aparecer 1s ease-out forwards;
@@ -137,7 +135,7 @@
     }
 
     .bloque-detalle p {
-      font-family: 'Adabelle Handwriting', cursive;
+      font-family: 'Montserrat', sans-serif; /* Cambiado */
       font-size: 1.2rem;
       line-height: 1.4;
       color: white;
@@ -248,4 +246,3 @@
   </section>
 </body>
 </html>
-
