--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Montserrat', sans-serif; /* Cambiamos aquí */
+      font-family: 'Montserrat', sans-serif;
       background-color: #F8F9FC;
       color: #111;
       overflow-x: hidden;
@@ -28,7 +28,7 @@
       color: white;
       text-decoration: none;
       margin: 0 1rem;
-      font-size: 1rem;
+      font-size: 1.5rem;
       font-weight: bold;
       transition: color 0.3s;
       font-family: 'Montserrat', sans-serif; 
@@ -246,3 +246,4 @@
   </section>
 </body>
 </html>
+
