--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
       text-align: center;
     }
 
-    header a {
-      color: white;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-size: 1.5rem;
-      font-weight: bold;
-      transition: color 0.3s;
-      font-family: 'Montserrat', sans-serif; 
-    }
+  header a {
+    color: white;
+    text-decoration: none;
+    margin: 0 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: color 0.3s ease; /* transición suave */
+    font-family: 'Montserrat', sans-serif;
+  }
 
-    header a:hover {
-      color: #ffcc00;
-    }
-
+  header a:hover {
+    color: #F5B1B8;
+  }
+    
     main#inicio {
       position: relative;
       width: 100vw;
@@ -247,5 +247,6 @@
   </section>
 </body>
 </html>
+
 
 
