--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 <body>
   <header>
     <a href="#inicio">Inicio</a>
-    <a href="#nosotros">Nosotros</a>
+    <a href="#nosotros">Nuestra historia</a>
     <a href="#detalles">Detalles</a>
-    <a href="#salon">El salón</a>
+    <a href="#salon">El Salón</a>
     <a href="#registro">Registro</a>
   </header>
 
@@ -213,11 +213,11 @@
     <div class="detalles-bloques">
       <div class="bloque-detalle">
         <h3>CUANDO?</h3>
-        <p>Sábado 27 de Diciembre de 2025 
-          a las 19:30 hs</p>
+        <p>Sábado, 27 de Diciembre de 2025 
+          a las 19.30 hs</p>
       </div>
       <div class="bloque-detalle">
-        <h3>DONDE?</h3>
+        <h3>DÓNDE?</h3>
         <p>Las Mercedes Casa de Campo 
           Unquillo<br>
         (Cuenta con su propio estacionamiento 
