--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     margin: 0 1rem;
     font-size: 1rem;
     font-weight: bold;
-    transition: color 0.3s ease; /* transición suave */
+    transition: color 0.3s ease;
     font-family: 'Montserrat', sans-serif;
   }
 
@@ -53,7 +53,7 @@
     font-size: clamp(2rem, 6vw, 6rem);
     color: #BE1823;
     text-align: center;
-    line-height: 0.9;
+    line-height: 0.6;
     margin-bottom: 2rem;
     margin-top: 2vh;
     opacity: 0;
@@ -178,7 +178,7 @@
 <body>
   <header>
     <a href="#inicio">Inicio</a>
-    <a href="#nosotros">Nuestra historia</a>
+    <a href="#nosotros">Nosotros</a>
     <a href="#detalles">Detalles</a>
     <a href="#salon">El Salón</a>
     <a href="#registro">Registro</a>
@@ -195,7 +195,7 @@
   </main>
 
   <section id="nosotros">
-    <h2 class="nosotros-titulo">Nosotros</h2>
+    <h2 class="nosotros-titulo">Nuestra historia</h2>
     <div class="nosotros-contenido">
       <p>
         Nuestra historia no es una de cuentos. Lo nuestro siempre fue más lo de las palabras afiladas que lo del amor a primera vista.<br>
@@ -247,6 +247,7 @@
   </section>
 </body>
 </html>
+
 
 
 
