--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
     font-size: clamp(2rem, 6vw, 6rem);
     color: #BE1823;
     text-align: center;
-    line-height: 0.6;
+    line-height: 0.75;
     margin-bottom: 2rem;
     margin-top: 2vh;
     opacity: 0;
     transform: translateY(20px);
     animation: aparecer 1s ease-out forwards;
   }
-
 
     .gif-fondo {
       width: 100%;
@@ -201,8 +200,7 @@
         Nuestra historia no es una de cuentos. Lo nuestro siempre fue más lo de las palabras afiladas que lo del amor a primera vista.<br>
         Nos conocimos, nos desconocimos y aprendimos a volver a conocernos.<br>
         Discutimos, pensamos juntos, nos desafiamos, y en el medio de todo eso, nos elegimos.<br>
-        Decidimos casarnos, no por protocolo, ni por presión.<br>
-        Porque queremos vivir juntos, donde sea.<br>
+        Decidimos casarnos, no por protocolo, si no porque queremos vivir juntos, donde sea.<br>
         Y porque si la vida ya es un delirio, mejor armar una fiesta.
       </p>
     </div>
@@ -213,8 +211,8 @@
     <div class="detalles-bloques">
       <div class="bloque-detalle">
         <h3>CUANDO?</h3>
-        <p>Sábado, 27 de Diciembre de 2025 
-          a las 19.30 hs</p>
+        <p>Sábado, 27 de Diciembre de 2025.<br>
+          Ceremonia a las 19.30 hs.</p>
       </div>
       <div class="bloque-detalle">
         <h3>DÓNDE?</h3>
@@ -247,6 +245,7 @@
   </section>
 </body>
 </html>
+
 
 
 
