--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     }
 
     .bloque-detalle p {
-      font-family: 'Montserrat', sans-serif; /* Cambiado */
+      font-family: 'Montserrat', sans-serif;
       font-size: 1.2rem;
       line-height: 1.4;
       color: white;
@@ -185,7 +185,7 @@
 
   <main id="inicio">
     <h1 class="titulo-central">
-      IARA   &<br>
+      IARA &<br>
       IMANOL
     </h1>
     <div class="gif-fondo">
@@ -216,8 +216,8 @@
       </div>
       <div class="bloque-detalle">
         <h3>DÓNDE?</h3>
-        <p>Las Mercedes Casa de Campo 
-          Unquillo<br>
+        <p>Las Mercedes-Casa de Campo,
+          Unquillo, Córdoba.<br>
         (Cuenta con su propio estacionamiento 
         para más tranquilidad)</p>
       </div>
@@ -225,13 +225,11 @@
         <h3>DRESSCODE?</h3>
         <p>Como estamos en una casona de campo 
           recomendamos semiformal para asegurar la 
-          comodidad de los presentes</p>
+          comodidad de los presentes.</p>
       </div>
       <div class="bloque-detalle">
-        <h3>HASTA CUANDO PUEDO CONFIRMAR?</h3>
-        <p>El deadline de confirmación 
-          es hasta el 9 de Diciembre 
-          como fecha máxima</p>
+        <h3>RSVP</h3>
+        <p>Por favor, confirmar asistancia antes del 9 de Diciembre.</p>
       </div>
     </div>
   </section>
@@ -245,9 +243,3 @@
   </section>
 </body>
 </html>
-
-
-
-
-
-
