--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       </div>
       <div class="bloque-detalle">
         <h3>RSVP</h3>
-        <p>Por favor, confirmar asistancia antes del 9 de Diciembre.</p>
+        <p>Por favor, confirmar asistencia antes del 9 de Diciembre.</p>
       </div>
     </div>
   </section>
@@ -243,3 +243,4 @@
   </section>
 </body>
 </html>
+
