--- a/index.html
+++ b/index.html
@@ -235,12 +235,30 @@
   </section>
 
   <section id="salon">
-    <!-- Contenido de El salón -->
-  </section>
+<section id="salon" style="background-color: #fff; padding: 6vh 5vw; text-align: center;">
+  <h2 style="font-family: 'Cooper Black', serif; font-size: clamp(2rem, 6vw, 4rem); color: #BE1823; margin-bottom: 2rem;">
+    El Salón
+  </h2>
+  <p style="max-width: 800px; margin: 0 auto; font-family: 'Montserrat', sans-serif; font-size: 1.2rem; line-height: 1.5; color: #111;">
+    Las Mercedes – Casa de Campo es el lugar que elegimos para celebrar. Rodeado de naturaleza, con espacios amplios y cálidos, es el escenario perfecto para compartir este momento con ustedes.
+  </p>
+  <div style="margin-top: 3rem;">
+    <iframe
+      src="https://www.google.com/maps?q=Las+Mercedes+470,+Unquillo,+Córdoba,+Argentina&output=embed"
+      width="100%"
+      height="400"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</section>  </section>
 
   <section id="registro">
     <!-- Contenido de Registro -->
   </section>
 </body>
 </html>
+
 
